ajout d3graphic et suppression pokebox

--- a/index.html
+++ b/index.html
@@ -201,8 +201,9 @@
             pour une écoute et un service de qualité. Je vous présente sur ce
             site et à travers mes projets ce que je suis capable de faire en
             JavaScript natif. J'ai également des compétences avec des library
-            JS(GreenSock, React...), opérationnel dès à présent pour vos projets
-            de site web alors n'hésitez pas😉 à me contacter pour en discuter !
+            JS(GreenSock, React, Vue...), opérationnel dès à présent pour vos
+            projets de site web alors n'hésitez pas😉 à me contacter pour en
+            discuter !
           </p>
         </div>
         <div class="pres-droite">
@@ -595,16 +596,20 @@
         <strong>Greensocks</strong>. Ce slider contient des
         <strong>jeux</strong> au nombre de trois, ils sont faits en
         <strong>CSS</strong> et <strong>JavaScript</strong> natif. Il y a
-        également 4 <strong>API</strong>(Application Programming Interface), qui
+        également 3 <strong>API</strong>(Application Programming Interface), qui
         vous permettrons d'avoir accès à des données de manière dynamique, comme
-        rechercher une idée de recette🍝, trouver votre pokemon⚡ préféré, ou
-        encore trouver l'inspiration avec l'API de citations💭 ainsi Qu'une Api
-        de blagues, important la bonne humeur😃, pour finir un mini projet relax
-        la yoga routine🙏. Dans tous les cas ce sont des exemples sur ce que je
+        rechercher une idée de recette🍝,trouver l'inspiration avec l'API de
+        citations💭 qui est en anglais "be or not to be", ainsi Qu'une Api de
+        blagues, important la bonne humeur😃. Vous trouverez également un
+        graphique📊 circulaire réalisé avec l'aide de <strong>D3</strong>js,
+        permettant de manipuler des documents basés sur des données et ici de
+        visualiser son budget en couleur. Pour finir un mini projet relax la
+        yoga routine🙏. Dans tous les cas ce sont des exemples sur ce que je
         suis capable de faire en <strong>JavaScript</strong> natif, tout ça
         n'est qu'un début, car je proposerai des projets avec le framework JS
-        <strong>React</strong>. Bien sûr, je mettrais à jour régulièrement mes
-        projets sur ce site, et tous les projets sont disponibles sur mon profil
+        <strong>React</strong> et bien d'autres surprises. Bien sûr, je mettrais
+        à jour régulièrement mes projets sur ce site, et tous les projets sont
+        disponibles sur mon profil
         <a
           href="https://github.com/Oliive33"
           target="_blank"
@@ -707,17 +712,17 @@
         </div>
         <div class="slide s5">
           <a
-            href="https://oliive33.github.io/Pokemon-API/"
+            href="https://oliive33.github.io/D3-graph-circular/"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <h3>Pokebox</h3>
+            <h3>Graphic D3</h3>
             <hr />
             <div class="txt-slide">
               <p>
-                Attrapez-les tous!!! Vous aimez les Pokémon ou vous êtes juste
-                curieux de découvrir leurs drôles de noms, alors partez à la
-                recherche de votre préféré. Moi, c’est Pikachu et vous ?
+                Avec D3.JS on voit la vie en 3d ou presque, manipuler les
+                documents basés sur des données pour donner vie à des graphiques
+                de qualité ! Gérer son budget en couleur, c’est Meilleur!!!
               </p>
             </div>
           </a>
