modif partie projets et slider

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Voici mon site web, portfolio de développeur Front-end, CSS, JavaScript freelance"
+      content="Voici mon site web, portfolio de développeur web Front-end, CSS, JavaScript freelance"
     />
     <meta property="og:title" content="homemade-web" />
     <meta property="og:type" content="portfolio" />
@@ -343,27 +343,28 @@
           <div class="cont-img-port">
             <img
               srcset="
-                ressources/img-projets/quiz-js.jpg  500w,
-                ressources/img-projets/quiz-js.jpg  800w,
-                ressources/img-projets/quiz-js.jpg 1200w
+                ressources/img-projets/barber.jpg  500w,
+                ressources/img-projets/barber.jpg  800w,
+                ressources/img-projets/barber.jpg 1200w
               "
               sizes="(max-width: 500px) 500px,
               (max-width: 800px) 800px,
               1200px
         "
-              src="./ressources/img-projets/quiz-js.jpg"
+              src="./ressources/img-projets/barber.jpg"
               width="800"
               height="400"
               alt="image projet"
             />
           </div>
-          <h3>Projet Quiz JavaScript</h3>
+          <h3>Projet site BarberShop</h3>
           <p>
-            Projet Quiz JS de 10 questions, réalisé en
-            <strong>JavaScript</strong> natif, à vous de jouer.
+            Projet Barber21, réalisé en <strong>CSS </strong>et
+            <strong>JavaScript </strong>, ainsi que la librairie d'animation JS
+            <strong>GreenSock</strong>.
           </p>
           <a
-            href="https://oliive33.github.io/projet-quiz-app-js/"
+            href="https://oliive33.github.io/site-Barber21/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
@@ -553,7 +554,7 @@
 
         <div class="range-cont">
           <p class="label-skill">JavaScript</p>
-          <p class="number-skill">75%</p>
+          <p class="number-skill">80%</p>
           <div class="barre-skill b2"></div>
           <div class="barre-grises"></div>
         </div>
@@ -567,7 +568,7 @@
 
         <div class="range-cont">
           <p class="label-skill">SEO</p>
-          <p class="number-skill">80%</p>
+          <p class="number-skill">85%</p>
           <div class="barre-skill b4"></div>
           <div class="barre-grises"></div>
         </div>
@@ -600,16 +601,19 @@
         vous permettrons d'avoir accès à des données de manière dynamique, comme
         rechercher une idée de recette🍝,trouver l'inspiration avec l'API de
         citations💭 qui est en anglais "be or not to be", ainsi Qu'une Api de
-        blagues, important la bonne humeur😃. Vous trouverez également un
-        graphique📊 circulaire réalisé avec l'aide de <strong>D3</strong>js,
-        permettant de manipuler des documents basés sur des données et ici de
-        visualiser son budget en couleur. Pour finir un mini projet relax la
-        yoga routine🙏. Dans tous les cas ce sont des exemples sur ce que je
-        suis capable de faire en <strong>JavaScript</strong> natif, tout ça
-        n'est qu'un début, car je proposerai des projets avec le framework JS
-        <strong>React</strong> et bien d'autres surprises. Bien sûr, je mettrais
-        à jour régulièrement mes projets sur ce site, et tous les projets sont
-        disponibles sur mon profil
+        blagues, important la bonne humeur😃. Vous trouverez également un Quiz❓
+        <strong>JavaScript</strong> et un graphique📊 circulaire réalisé avec
+        l'aide de <strong>D3</strong>js, permettant de manipuler des documents
+        basés sur des données et ici de visualiser son budget en couleur. Pour
+        finir un mini projet relax la yoga routine🙏. Dans tous les cas ce sont
+        des exemples sur ce que je suis capable de faire en
+        <strong>JavaScript</strong> natif, tout ça n'est qu'un début, car je
+        proposerai d'autres projets en JavaScript avec des librairies<strong
+          >JS</strong
+        >
+        comme <strong>React</strong>, <strong>Vue</strong> et bien d'autres
+        surprises. Bien sûr, je mettrais à jour régulièrement mes projets sur ce
+        site, et tous les projets sont disponibles sur mon profil
         <a
           href="https://github.com/Oliive33"
           target="_blank"
@@ -621,7 +625,7 @@
     <section class="container-slider">
       <div class="counter">
         <span>1</span> /
-        <span>8</span>
+        <span>9</span>
       </div>
       <div class="slider">
         <div class="container-btns">
@@ -729,6 +733,23 @@
         </div>
         <div class="slide s6">
           <a
+            href="https://oliive33.github.io/projet-quiz-app-js/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <h3>Projet Quiz JS</h3>
+            <hr />
+            <div class="txt-slide">
+              <p>
+                Projet Quiz JavaScript de 10 questions avec un timer, réalisé en
+                <strong>JavaScript</strong> natif, prêt à relever le défi!!! À
+                vous de jouer.
+              </p>
+            </div>
+          </a>
+        </div>
+        <div class="slide s7">
+          <a
             href="https://oliive33.github.io/API-Jokes/"
             target="_blank"
             rel="noopener noreferrer"
@@ -744,7 +765,7 @@
             </div>
           </a>
         </div>
-        <div class="slide s7">
+        <div class="slide s8">
           <a
             href="https://oliive33.github.io/Quote-Generator-js/"
             target="_blank"
@@ -762,7 +783,7 @@
             </div>
           </a>
         </div>
-        <div class="slide s8">
+        <div class="slide s9">
           <a
             href="https://oliive33.github.io/Projet-Yoga-routine/"
             target="_blank"
@@ -786,7 +807,7 @@
 
     <div class="section-parallax">
       <p class="txt-par">521 tasses de café</p>
-      <p class="txt-par">32 projets</p>
+      <p class="txt-par">35 projets</p>
       <p class="txt-par">+1000 heures de coding</p>
     </div>
 
