modif texte slider quiz js

--- a/index.html
+++ b/index.html
@@ -742,7 +742,8 @@
             <div class="txt-slide">
               <p>
                 Projet Quiz JavaScript de 10 questions avec un timer, réalisé en
-                <strong>JavaScript</strong> natif, prêt à relever le défi!!! À
+                <strong>JavaScript</strong> natif, 15 secondes par questions
+                alors prêt à relever le défi et de devenir la maître du JS!!! À
                 vous de jouer.
               </p>
             </div>
