modifs contacts et presentation

--- a/index.html
+++ b/index.html
@@ -196,14 +196,15 @@
           <p>
             Je m'appelle Olivier, j'ai 33 ans et je vis actuellement en France.
             Suite à une reconversion pro suivi d'une formation de développeur
-            web, je me lance en tant que développeur front-end en freelance. Mes
+            web, je suis maintenant développeur front-end en freelance. Mes
             expériences professionnelles passées, m'aident beaucoup aujourd’hui
             pour une écoute et un service de qualité. Je vous présente sur ce
             site et à travers mes projets ce que je suis capable de faire en
             JavaScript natif. J'ai également des compétences avec des library
-            JS(GreenSock, React, Vue...), opérationnel dès à présent pour vos
-            projets de site web alors n'hésitez pas😉 à me contacter pour en
-            discuter !
+            JS(GreenSock, React, Vue...), opérationnel pour vos projets de site
+            web alors n'hésitez pas😉 à me contacter pour en discuter! Un
+            questionnaire découverte dans la partie contact est à votre
+            disposition pour définir ensemble au mieux vos projets.
           </p>
         </div>
         <div class="pres-droite">
@@ -816,18 +817,32 @@
     <section class="section-contact" id="contact">
       <div class="contact-background">
         <h2>Contacts</h2>
-        <div class="btn">
-          <a class="btn-contact" href="mailto:olive@homemade-web.com"
-            >Me Contacter ✉️</a
-          >
-        </div>
-        <div class="whatsapp">
-          <div class="logo-whatsapp">
-            <img src="./ressources/whatpp.svg" alt="logo whatsapp" />
-            <a href="https://api.whatsapp.com/send?phone=33675185844"
-              >+33 6 75 18 58 44</a
+        <div class="coordonnees">
+          <div class="btn">
+            <a class="btn-contact" href="mailto:olive@homemade-web.com"
+              >Me Contacter ✉️</a
             >
           </div>
+          <div class="whatsapp">
+            <div class="logo-whatsapp">
+              <a
+                href="https://api.whatsapp.com/send?phone=33675185844"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="./ressources/whatpp.svg" alt="logo whatsapp"
+              /></a>
+            </div>
+          </div>
+        </div>
+        <h4>Pour accéder à votre questionnaire découverte :</h4>
+        <div class="questionnaire">
+          <img src="./ressources/right-arrow.svg" alt="arrow-right" />
+          <a
+            href="https://www.askabox.fr/repondre.php?s=417816&r=SPx37C8HgfEG"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Cliquer ici
+          </a>
         </div>
       </div>
     </section>
