modif fichier html

--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
     </section>
 
     <footer>
-      &copy; Depuis Août-2021 homemade-web.com Tout Droits réservés
+      &copy; Depuis Juillet-2021 homemade-web.com Tout Droits réservés
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
