--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Voici mon site web, portfolio de développeur web Front-end, CSS, JavaScript freelance"
+      content="Voici mon site web, portfolio de développeur web Front-end, CSS, JavaScript, React freelance"
     />
     <meta property="og:title" content="homemade-web" />
     <meta property="og:type" content="portfolio" />
@@ -50,6 +50,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!-- Btn flottant left petit menu -->
@@ -504,6 +510,38 @@
             >Découvrez le projet</a
           >
         </div>
+        <div class="item vague3">
+          <div class="cont-img-port">
+            <img
+              srcset="
+                ressources/img-projets/music21.jpeg  500w,
+                ressources/img-projets/music21.jpeg  800w,
+                ressources/img-projets/music21.jpeg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
+              src="./ressources/img-projets/music21.jpeg"
+              width="800"
+              height="400"
+              alt="image projet"
+            />
+          </div>
+          <h3>Projet site Music21</h3>
+          <p>
+            Un projet réalisé en <strong>Css</strong>, et
+            <strong>Javascript</strong> au design moderne et dynamique grâce à
+            <strong>ScrollReveal</strong>.
+          </p>
+          <a
+            href="https://oliive33.github.io/Music21/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
 
         <div class="item vague3">
           <div class="cont-img-port">
@@ -848,8 +886,14 @@
     </section>
 
     <footer>
-      &copy; Depuis Juillet-2021 homemade-web.com Tout Droits réservés
+      &copy; Depuis Août-2021 homemade-web.com Tout Droits réservés
+      <a class="link-cgu" href="cgu.html">CGU</a>
     </footer>
+
+    <!-- Scroll UP -->
+    <a href="#" class="scrollup" id="scroll-up">
+      <i class="fas fa-chevron-up"></i>
+    </a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js"></script>
