--- a/index.html
+++ b/index.html
@@ -887,7 +887,13 @@
 
     <footer>
       &copy; Depuis Août-2021 homemade-web.com Tout Droits réservés
-      <a class="link-cgu" href="cgu.html">CGU</a>
+      <a
+        class="link-cgu"
+        href="cgu.html"
+        target="_blank"
+        rel="noopener noreferrer"
+        >CGU</a
+      >
     </footer>
 
     <!-- Scroll UP -->
