--- a/cgu.html
+++ b/cgu.html
@@ -30,7 +30,7 @@
   />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="./cgu.css" />
+    <link rel="stylesheet" href="./cgu.min.css" />
   </head>
   <body>
       <div class="container-global">
