--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.min.css" />
+    <link rel="stylesheet" href="./style.min.20221010.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
