--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
       sizes="16x16"
       href="./ressources/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./ressources/favicon/site.webmanifest" />
+    <link
+      rel="manifest"
+      type="image/png"
+      href="./ressources/favicon/site.webmanifest"
+    />
     <link
       rel="mask-icon"
       href="./ressources/favicon/safari-pinned-tab.svg"
@@ -49,7 +53,7 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.min.20221010.css" />
+    <link rel="stylesheet" href="./style.min.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
