ajout community navbar

--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
       </div>
       <div class="blocs-menu">
         <span class="nav-menu-item">
+          <a
+            href="https://community.homemade-web.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Community</a
+          >
+        </span>
+      </div>
+      <div class="blocs-menu">
+        <span class="nav-menu-item">
           <a href="#contact"> Contact </a>
         </span>
       </div>
