modif meta desc

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Voici mon site web, portfolio de développeur web Front-end, CSS, JavaScript, React freelance"
+      content="Portfolio de développeur Front-end Freelance création de site web fait maison sur mesure, CSS, JavaScript,Tailwind, Bootstrap,Seo, React"
     />
     <meta property="og:title" content="homemade-web" />
     <meta property="og:type" content="portfolio" />
     <meta
       property="og:description"
-      content="Voici mon site web, portfolio de développeur Front-end, CSS, JavaScript freelance"
+      content="Portfolio de développeur Front-end Freelance création de site web fait maison sur mesure, CSS, JavaScript,Tailwind, Bootstrap,Seo, React"
     />
     <meta property="og:url" content="https://homemade-web.com/" />
-    <meta property="og:image" content="https://ressoures/logo.png" />
+    <meta property="og:image" content="./ressources/logo.png" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
