--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio de développeur Front-end Freelance création de site web fait maison sur mesure, CSS, JavaScript,Tailwind, Bootstrap,Seo, React"
+      content="Home Web Portfolio de développeur Front-end Freelance création de site web fait maison sur mesure, CSS, JavaScript,Tailwind, Bootstrap,Seo, React"
     />
     <meta property="og:title" content="homemade-web" />
     <meta property="og:type" content="portfolio" />
     <meta
       property="og:description"
-      content="Portfolio de développeur Front-end Freelance création de site web fait maison sur mesure, CSS, JavaScript,Tailwind, Bootstrap,Seo, React"
+      content="Home Web Portfolio de développeur Front-end Freelance création de site web fait maison sur mesure, CSS, JavaScript,Tailwind, Bootstrap,Seo, React"
     />
     <meta property="og:url" content="https://homemade-web.com/" />
     <meta property="og:image" content="./ressources/logo.png" />
