--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>Portfolio</title>
+    <title>Portfolio- Developpeur web freelance</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow, noydir, noodp, all" />
     <meta
       name="description"
       content="Home Web Portfolio de développeur Front-end Freelance création de site web fait maison sur mesure, CSS, JavaScript,Tailwind, Bootstrap,Seo, React"
@@ -54,12 +55,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+    <link rel="canonical" href="https://www.homemade-web.com/" />
+    <script
+      src="https://kit.fontawesome.com/1e5cef7426.js"
       crossorigin="anonymous"
-    />
+    ></script>
   </head>
   <body>
     <!-- Btn flottant left petit menu -->
@@ -862,7 +862,7 @@
     <div class="section-parallax">
       <p class="txt-par">521 tasses de café</p>
       <p class="txt-par">35 projets</p>
-      <p class="txt-par">+1000 heures de coding</p>
+      <p class="txt-par">+1001 heures de coding</p>
     </div>
 
     <!-- Section contact -->
