--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <title>Portfolio-Developpeur web freelance</title>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow, noydir, noodp, all" />
     <meta
@@ -550,6 +549,38 @@
           </p>
           <a
             href="https://oliive33.github.io/Music21/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
+        <div class="item vague3">
+          <div class="cont-img-port">
+            <img
+              srcset="
+                ressources/img-projets/travel22.jpg  500w,
+                ressources/img-projets/travel22.jpg  800w,
+                ressources/img-projets/travel22.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
+              src="./ressources/img-projets/travel22.jpg"
+              width="800"
+              height="400"
+              alt="image projet"
+            />
+          </div>
+          <h3>Projet site Travel22</h3>
+          <p>
+            Projet en <strong>Css</strong>, et <strong>Javascript</strong> avec
+            les plugins <strong>ScrollReveal</strong> et
+            <strong>Swiper</strong> & le <strong>dark mode </strong>en option.
+          </p>
+          <a
+            href="https://oliive33.github.io/responsive-travel-website/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
