ajout projet plantix

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       content="Home Web Portfolio de développeur Front-end Freelance création de site web fait maison sur mesure, CSS, JavaScript,Tailwind, Bootstrap,Seo, React"
     />
     <meta property="og:url" content="https://homemade-web.com/" />
-    <meta property="og:image" content="./ressources/logo.png" />
+    <meta
+      property="og:image"
+      content="https://www.homemade-web.com/ressources/logo.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -614,6 +617,38 @@
           </p>
           <a
             href="https://oliive33.github.io/projet-ecommerce-react/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
+        <div class="item vague3">
+          <div class="cont-img-port">
+            <img
+              srcset="
+                ressources/img-projets/Plantix.jpeg  500w,
+                ressources/img-projets/Plantix.jpeg  800w,
+                ressources/img-projets/Plantix.jpeg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
+              src="./ressources/img-projets/Plantix.jpeg"
+              width="800"
+              height="400"
+              alt="image projet"
+            />
+          </div>
+          <h3>Projet site Plantix</h3>
+          <p>
+            Projet style e-commerce en <strong>Css</strong>, et
+            <strong>Javascript</strong> avec <strong>ScrollReveal</strong> au
+            <strong>Design</strong> moderne<strong> & </strong>zen.
+          </p>
+          <a
+            href="https://oliive33.github.io/responsive-site-plants/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
