--- a/index.html
+++ b/index.html
@@ -595,28 +595,28 @@
           <div class="cont-img-port">
             <img
               srcset="
-                ressources/img-projets/commerce.js.jpg  500w,
-                ressources/img-projets/commerce.js.jpg  800w,
-                ressources/img-projets/commerce.js.jpg 1200w
+                ressources/img-projets/tastyfood.png  500w,
+                ressources/img-projets/tastyfood.png  800w,
+                ressources/img-projets/tastyfood.png 1200w
               "
               sizes="(max-width: 500px) 500px,
               (max-width: 800px) 800px,
               1200px
         "
-              src="./ressources/img-projets/commerce.js.jpg"
+              src="./ressources/img-projets/tastyfood.png"
               width="800"
               height="400"
               alt="image projet"
             />
           </div>
-          <h3>Projet site E-Commerce</h3>
+          <h3>Projet site Restaurant</h3>
           <p>
-            Un projet réalisé grâce à <strong>React</strong>, avec en guest
-            <strong>commerce.js</strong> et le moyen de paiement
-            <strong> Stripe</strong>.
+            Un projet réalisé en <strong>Css</strong> et
+            <strong>JavaScript</strong> avec le dark mode ainsi que des
+            animations dynamiques.
           </p>
           <a
-            href="https://oliive33.github.io/projet-ecommerce-react/"
+            href="https://oliive33.github.io/tasty-restaurant/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
@@ -649,6 +649,38 @@
           </p>
           <a
             href="https://oliive33.github.io/responsive-site-plants/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
+        <div class="item vague3">
+          <div class="cont-img-port">
+            <img
+              srcset="
+                ressources/img-projets/commerce.js.jpg  500w,
+                ressources/img-projets/commerce.js.jpg  800w,
+                ressources/img-projets/commerce.js.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
+              src="./ressources/img-projets/commerce.js.jpg"
+              width="800"
+              height="400"
+              alt="image projet"
+            />
+          </div>
+          <h3>Projet site E-Commerce</h3>
+          <p>
+            Un projet réalisé grâce à <strong>React</strong>, avec en guest
+            <strong>commerce.js</strong> et le moyen de paiement
+            <strong> Stripe</strong>.
+          </p>
+          <a
+            href="https://oliive33.github.io/projet-ecommerce-react/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
