--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Portfolio-Developpeur web freelance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="p:domain_verify" content="57523d3d8535083e4203754ab7e75798" />
     <meta name="robots" content="index, follow, noydir, noodp, all" />
     <meta
       name="description"
@@ -122,7 +123,13 @@
             <img class="mail" src="ressources/contact.svg" alt="logo contact" />
           </a>
         </div>
-      </div>
+
+        <div class="clock__date">
+          <span id="date-day-week"></span>
+          <span id="date-day"></span>
+          <span id="date-month"></span>
+          <span id="date-year"></span>
+        </div>
     </nav>
 
     <!-- Section Accueil -->
