modif fichier index et ajout projat blog

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             Laissez-moi me présenter en quelques phrases :
           </p>
           <p>
-            Je m'appelle Olivier, j'ai 33 ans et je vis actuellement en France.
+            Je m'appelle Olivier, j'ai 34 ans et je vis actuellement en France.
             Suite à une reconversion pro suivi d'une formation de développeur
             web, je suis maintenant développeur front-end en freelance. Mes
             expériences professionnelles passées, m'aident beaucoup aujourd’hui
@@ -344,27 +344,28 @@
           <div class="cont-img-port">
             <img
               srcset="
-                ressources/img-projets/site-bankist.jpg  500w,
-                ressources/img-projets/site-bankist.jpg  800w,
-                ressources/img-projets/site-bankist.jpg 1200w
+                ressources/img-projets/mountain.jpg  500w,
+                ressources/img-projets/mountain.jpg  800w,
+                ressources/img-projets/mountain.jpg 1200w
               "
               sizes="(max-width: 500px) 500px,
               (max-width: 800px) 800px,
               1200px
         "
-              src="ressources/img-projets/site-bankist.jpg"
+              src="ressources/img-projets/mountain.jpg"
               width="800"
               height="400"
               alt="image projet"
             />
           </div>
-          <h3>Projet Site Bank Interface</h3>
+          <h3>Projet Blog Travel</h3>
           <p>
-            Projet réalisé en <strong>JavaScript</strong> natif, il provient de
-            ma formation JS réalisée sur Udemy en Anglais.
+            Projet réalisé en <strong>CSS</strong> & <strong>JavaScript</strong> natif, ainsi
+            qu'avec <strong>scrollreveal</strong> et une image dynamique.
+            
           </p>
           <a
-            href="https://oliive33.github.io/Bankist-Dom/"
+            href="https://oliive33.github.io/blog-travel/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
