--- a/index.html
+++ b/index.html
@@ -312,27 +312,27 @@
           <div class="cont-img-port">
             <img
               srcset="
-                ressources/img-projets/kyoto.jpg  500w,
-                ressources/img-projets/kyoto.jpg  800w,
-                ressources/img-projets/kyoto.jpg 1200w
+                ressources/img-projets/site-montres.jpg  500w,
+                ressources/img-projets/site-montres.jpg  800w,
+                ressources/img-projets/site-montres.jpg 1200w
               "
               sizes="(max-width: 500px) 500px,
               (max-width: 800px) 800px,
               1200px
         "
-              src="ressources/img-projets/kyoto.jpg"
+              src="ressources/img-projets/site-montres.jpg"
               width="800"
               height="400"
               alt="image projet"
             />
           </div>
-          <h3>Projet site de Voyage</h3>
+          <h3>Projet site commerce Montres</h3>
           <p>
-            Envie d'ailleurs, voici l'exemple d'un site de voyage avec du
+            What time is it ?, design de site e-commerce de montres en
             <strong>CSS</strong> et un peu de <strong>Javascript</strong>.
           </p>
           <a
-            href="https://oliive33.github.io/Projet-site-voyage/"
+            href="https://oliive33.github.io/watches-website/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
