--- a/index.html
+++ b/index.html
@@ -225,19 +225,23 @@
           <p class="presentation-txt">
             Laissez-moi me présenter en quelques phrases :
           </p>
-          <p>
+          <p class="text">
             Je m'appelle Olivier, j'ai 34 ans et je vis actuellement en France.
             Suite à une reconversion pro suivi d'une formation de développeur
             web, je suis maintenant développeur front-end en freelance. Mes
             expériences professionnelles passées, m'aident beaucoup aujourd’hui
-            pour une écoute et un service de qualité. Je vous présente sur ce
+            pour une écoute et un service de qualité.<span class="dots">..</span> 
+            <span class="moreText">Je vous présente sur ce
             site et à travers mes projets ce que je suis capable de faire en
             JavaScript natif. J'ai également des compétences avec des library
             JS(GreenSock, React, Vue...), opérationnel pour vos projets de site
             web alors n'hésitez pas😉 à me contacter pour en discuter! Un
             questionnaire découverte dans la partie contact est à votre
             disposition pour définir ensemble au mieux vos projets.
+            </span
+            >
           </p>
+          <button class="read-more-btn">Voir Plus</button>
         </div>
         <div class="pres-droite">
           <ul class="liste-presentation">
