ajout et modif projets

--- a/index.html
+++ b/index.html
@@ -235,9 +235,10 @@
             site et à travers mes projets ce que je suis capable de faire en
             JavaScript natif. J'ai également des compétences avec des library
             JS(GreenSock, React, Vue...), opérationnel pour vos projets de site
-            web alors n'hésitez pas😉 à me contacter pour en discuter! Un
+            web alors n'hésitez pas😉 à me contacter pour en discuter! 
+            <!-- Un
             questionnaire découverte dans la partie contact est à votre
-            disposition pour définir ensemble au mieux vos projets.
+            disposition pour définir ensemble au mieux vos projets. -->
             </span
             >
           </p>
@@ -903,7 +904,7 @@
         </div>
         <div class="slide s4">
           <a
-            href="https://oliive33.github.io/API-Meals/"
+            href="https://oliive33.github.io/new-api-recipes/"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -911,9 +912,9 @@
             <hr />
             <div class="txt-slide">
               <p>
-                Une petite faim, trouvez votre plat préféré à travers un large
-                choix de recette du monde. Les recettes de cette API ne sont
-                qu'en anglais mais avec les vidéos c'est easy!
+                Une petite faim, trouvez votre plat préférée à travers un large
+                choix de recette du monde. Cette new API de recettes n'est
+                qu'en anglais mais no worries avec les vidéos c'est easy!
               </p>
             </div>
           </a>
@@ -1011,9 +1012,9 @@
     <!-- Section Parallax -->
 
     <div class="section-parallax">
-      <p class="txt-par">521 tasses de café</p>
-      <p class="txt-par">35 projets</p>
-      <p class="txt-par">+1001 heures de coding</p>
+      <p class="txt-par">621 tasses de café</p>
+      <p class="txt-par">45 projets</p>
+      <p class="txt-par">+1021 heures de coding</p>
     </div>
 
     <!-- Section contact -->
@@ -1037,7 +1038,7 @@
             </div>
           </div>
         </div>
-        <h4>Pour accéder à votre questionnaire découverte :</h4>
+        <!-- <h4>Pour accéder à votre questionnaire découverte :</h4>
         <div class="questionnaire">
           <img src="./ressources/right-arrow.svg" alt="arrow-right" />
           <a
@@ -1046,7 +1047,7 @@
             rel="noopener noreferrer"
             >Cliquer ici
           </a>
-        </div>
+        </div> -->
       </div>
     </section>
 
