modif et ajout prohet burger

--- a/index.html
+++ b/index.html
@@ -515,27 +515,27 @@
           <div class="cont-img-port">
             <img
               srcset="
-                ressources/img-projets/site-bootstrap.jpg  500w,
-                ressources/img-projets/site-bootstrap.jpg  800w,
-                ressources/img-projets/site-bootstrap.jpg 1200w
+                ressources/img-projets/site-burger.jpg  500w,
+                ressources/img-projets/site-burger.jpg  800w,
+                ressources/img-projets/site-burger.jpg 1200w
               "
               sizes="(max-width: 500px) 500px,
               (max-width: 800px) 800px,
               1200px
         "
-              src="ressources/img-projets/site-bootstrap.jpg"
+              src="ressources/img-projets/site-burger.jpg"
               width="800"
               height="400"
               alt="image projet"
             />
           </div>
-          <h3>Projet site Bootstrap</h3>
+          <h3>Projet site Burgers</h3>
           <p>
-            Site web réalisé avec le framewok CSS <strong>Bootstrap</strong>,
-            simple et efficace 100% responsive.
+            Site web réalisé en <strong>css</strong> & <strong>JavaScript</strong>,
+            avec la librairie js AOS au scroll aux effets cool .
           </p>
           <a
-            href="https://oliive33.github.io/Projet-site-Bootstrap/"
+            href="https://oliive33.github.io/Burger-website/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
