--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
           <h3>Projet site Burgers</h3>
           <p>
             Site web réalisé en <strong>css</strong> & <strong>JavaScript</strong>,
-            avec la librairie js AOS au scroll aux effets cool .
+            avec la librairie js <strong>AOS</strong> au scroll aux effets cool .
           </p>
           <a
             href="https://oliive33.github.io/Burger-website/"
@@ -649,13 +649,11 @@
               "
               sizes="(max-width: 500px) 500px,
               (max-width: 800px) 800px,
-              1200px
-        "
+              1200px"
               src="./ressources/img-projets/Plantix.jpeg"
               width="800"
               height="400"
-              alt="image projet"
-            />
+              alt="image projet" />
           </div>
           <h3>Projet site Plantix</h3>
           <p>
@@ -664,7 +662,67 @@
             <strong>Design</strong> moderne<strong> & </strong>zen.
           </p>
           <a
-            href="https://oliive33.github.io/responsive-site-plants/"
+            href=" https://oliive33.github.io/responsive-site-plants/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
+        <div class="item vague3">
+          <div class="cont-img-port">
+            <img
+              srcset="
+                ressources/img-projets/cosmetics.jpg  500w,
+                ressources/img-projets/cosmetics.jpg  800w,
+                ressources/img-projets/cosmetics.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px"
+              src="./ressources/img-projets/cosmetics.jpg"
+              width="800"
+              height="400"
+              alt="image projet" />
+          </div>
+          <h3>Projet site Cosmetics</h3>
+          <p>
+            Projet Cosmetics en <strong>Css</strong> et
+            <strong>Javascript</strong> avec la librairie js <strong>LightGallery</strong>
+           pour valoriser ses<strong> photos </strong> et produits.
+          </p>
+          <a
+            href="https://oliive33.github.io/cosmetic/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
+        <div class="item vague3">
+          <div class="cont-img-port">
+            <img
+              srcset="
+                ressources/img-projets/book-online.jpg  500w,
+                ressources/img-projets/book-online.jpg  800w,
+                ressources/img-projets/book-online.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px"
+              src="./ressources/img-projets/book-online.jpg"
+              width="800"
+              height="400"
+              alt="image projet" />
+          </div>
+          <h3>Projet site Book online</h3>
+          <p>
+            Projet Books online en <strong>Css</strong> et
+            <strong>Javascript</strong> avec le plugin js <strong>Swiper</strong>
+           pour mettre en avant votre <strong> librairie </strong>.
+          </p>
+          <a
+            href="https://oliive33.github.io/book-online/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
