--- a/index.html
+++ b/index.html
@@ -730,6 +730,35 @@
           >
         </div>
         <div class="item vague3">
+          <div class="cont-img-port cont-img-grocery">
+            <img
+              srcset="
+                ressources/img-projets/grocery.jpg  500w,
+                ressources/img-projets/grocery.jpg  800w,
+                ressources/img-projets/grocery.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px"
+              src="./ressources/img-projets/grocery.jpg"
+              width="800"
+              height="400"
+              alt="image projet" />
+          </div>
+          <h3>Projet faire ses courses online</h3>
+          <p>
+            Projet de site faire ses courses sur internet en <strong>Css</strong> et
+         <strong> Javascript</strong> pour des produits du quotidien.
+          </p>
+          <a
+            href="https://oliive33.github.io/grocery-website/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
+        <div class="item vague3">
           <div class="cont-img-port">
             <img
               srcset="
