ajout balise index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="p:domain_verify" content="57523d3d8535083e4203754ab7e75798" />
     <meta name="robots" content="index, follow, noydir, noodp, all" />
+    
     <meta
       name="description"
       content="Home Web Portfolio de développeur Front-end Freelance création de site web fait maison sur mesure, CSS, JavaScript,Tailwind, Bootstrap,Seo, React"
@@ -66,6 +67,10 @@
       src="https://kit.fontawesome.com/1e5cef7426.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-226068080-1">
+</script>
+
   </head>
   <body>
     <!-- Btn flottant left petit menu -->
@@ -1153,6 +1158,13 @@
     <a href="#" class="scrollup" id="scroll-up">
       <i class="fas fa-chevron-up"></i>
     </a>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-226068080-1');
+    </script>
 
     <!--=============== SCROLL REVEAL ===============-->
     <script src="./js/scrollreveal.min.js"></script>
