--- a/index.html
+++ b/index.html
@@ -515,7 +515,39 @@
             >Découvrez le projet</a
           >
         </div>
-
+             <div class="item vague3">
+          <div class="cont-img-port">
+            <img
+              srcset="
+                ressources/img-projets/music21.jpeg  500w,
+                ressources/img-projets/music21.jpeg  800w,
+                ressources/img-projets/music21.jpeg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
+              src="./ressources/img-projets/music21.jpeg"
+              width="800"
+              height="400"
+              alt="image projet"
+            />
+          </div>
+          <h3>Projet site Music21</h3>
+          <p>
+            Un projet réalisé en <strong>Css</strong>, et
+            <strong>Javascript</strong> au design moderne et dynamique grâce à
+            <strong>ScrollReveal</strong>.
+          </p>
+          <a
+            href="https://oliive33.github.io/Music21/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
+       
         <div class="item vague3">
           <div class="cont-img-port">
             <img
@@ -551,28 +583,28 @@
           <div class="cont-img-port">
             <img
               srcset="
-                ressources/img-projets/music21.jpeg  500w,
-                ressources/img-projets/music21.jpeg  800w,
-                ressources/img-projets/music21.jpeg 1200w
+                ressources/img-projets/pizzas.jpg  500w,
+                ressources/img-projets/pizzas.jpg  800w,
+                ressources/img-projets/pizzas.jpg 1200w
               "
               sizes="(max-width: 500px) 500px,
               (max-width: 800px) 800px,
               1200px
         "
-              src="./ressources/img-projets/music21.jpeg"
+              src="ressources/img-projets/pizzas.jpg"
               width="800"
               height="400"
               alt="image projet"
             />
           </div>
-          <h3>Projet site Music21</h3>
+          <h3>Projet site Pizza shop</h3>
           <p>
-            Un projet réalisé en <strong>Css</strong>, et
-            <strong>Javascript</strong> au design moderne et dynamique grâce à
-            <strong>ScrollReveal</strong>.
+            Projet site pizzas e-shop, en <strong>CSS</strong> et <strong>JavaScript</strong>,
+            toute la partie front-end d'un e-shop de qualité.
+
           </p>
           <a
-            href="https://oliive33.github.io/Music21/"
+            href="https://oliive33.github.io/pizzas-website/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
