--- a/index.html
+++ b/index.html
@@ -1162,6 +1162,20 @@
             </div>
           </div>
         </div>
+        <div class="section-google">
+          <img src="./ressources/google.png" alt="logo google">
+          <h3>My Google Business</h3>
+        </div>
+          <div class="link-google">
+            <a href="https://goo.gl/maps/LbsVkFpQNcDrVrf37" target="_blank" rel="noopener noreferrer">Avis Client</a>
+            <div class="stars">
+              <img src="./ressources/star.png" alt="logo star">
+              <img src="./ressources/star.png" alt="logo star">
+              <img src="./ressources/star.png" alt="logo star">
+              <img src="./ressources/star.png" alt="logo star">
+              <img src="./ressources/star.png" alt="logo star">
+            </div>
+          </div>
         <!-- <h4>Pour accéder à votre questionnaire découverte :</h4>
         <div class="questionnaire">
           <img src="./ressources/right-arrow.svg" alt="arrow-right" />
