--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             Laissez-moi me présenter en quelques phrases :
           </p>
           <p class="text">
-            Je m'appelle Olivier, j'ai 34 ans et je vis actuellement en France.
+            Je m'appelle Olivier, j'ai 34 ans, auto-entrepreneur.
             Suite à une reconversion pro suivi d'une formation de développeur
             web, je suis maintenant développeur front-end en freelance. Mes
             expériences professionnelles passées, m'aident beaucoup aujourd’hui
@@ -680,6 +680,36 @@
           <div class="cont-img-port">
             <img
               srcset="
+                ressources/img-projets/cosmetics.jpg  500w,
+                ressources/img-projets/cosmetics.jpg  800w,
+                ressources/img-projets/cosmetics.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px"
+              src="./ressources/img-projets/cosmetics.jpg"
+              width="800"
+              height="400"
+              alt="image projet" />
+          </div>
+          <h3>Projet site Cosmetics</h3>
+          <p>
+            Projet Cosmetics en <strong>Css</strong> et
+            <strong>Javascript</strong> avec la librairie js <strong>LightGallery</strong>
+           pour valoriser ses<strong> photos </strong> et produits.
+          </p>
+          <a
+            href="https://oliive33.github.io/cosmetic/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
+        <div class="item vague3">
+          <div class="cont-img-port">
+            <img
+              srcset="
                 ressources/img-projets/Plantix.jpeg  500w,
                 ressources/img-projets/Plantix.jpeg  800w,
                 ressources/img-projets/Plantix.jpeg 1200w
@@ -710,26 +740,25 @@
           <div class="cont-img-port">
             <img
               srcset="
-                ressources/img-projets/cosmetics.jpg  500w,
-                ressources/img-projets/cosmetics.jpg  800w,
-                ressources/img-projets/cosmetics.jpg 1200w
+                ressources/img-projets/photographer.jpg  500w,
+                ressources/img-projets/photographer.jpg  800w,
+                ressources/img-projets/photographer.jpg 1200w
               "
               sizes="(max-width: 500px) 500px,
               (max-width: 800px) 800px,
               1200px"
-              src="./ressources/img-projets/cosmetics.jpg"
+              src="./ressources/img-projets/photographer.jpg"
               width="800"
               height="400"
               alt="image projet" />
           </div>
-          <h3>Projet site Cosmetics</h3>
+          <h3>Projet portfolio photographe</h3>
           <p>
-            Projet Cosmetics en <strong>Css</strong> et
-            <strong>Javascript</strong> avec la librairie js <strong>LightGallery</strong>
-           pour valoriser ses<strong> photos </strong> et produits.
+            Projet pour photographe en <strong>Css</strong> et
+         <strong> Javascript</strong> avec <strong>ScrollReveal</strong> pour un effet d'apparition smooth.
           </p>
           <a
-            href="https://oliive33.github.io/cosmetic/"
+            href="https://oliive33.github.io/new-photographer/"
             class="btn-projets"
             target="_blank"
             rel="noopener noreferrer"
@@ -766,6 +795,7 @@
             >Découvrez le projet</a
           >
         </div>
+    
         <div class="item vague3">
           <div class="cont-img-port cont-img-grocery">
             <img
@@ -1165,9 +1195,9 @@
     <!-- Section Parallax -->
 
     <div class="section-parallax">
-      <p class="txt-par">621 tasses de café</p>
-      <p class="txt-par">45 projets</p>
-      <p class="txt-par">+1021 heures de coding</p>
+      <p class="txt-par">651 tasses de café</p>
+      <p class="txt-par">50 projets</p>
+      <p class="txt-par">+1221 heures de coding</p>
     </div>
 
     <!-- Section contact -->
