--- a/index.html
+++ b/index.html
@@ -858,6 +858,38 @@
           <div class="cont-img-port">
             <img
               srcset="
+                ressources/img-projets/site-fashion.jpg  500w,
+                ressources/img-projets/site-fashion.jpg  800w,
+                ressources/img-projets/site-fashion.jpg 1200w
+              "
+              sizes="(max-width: 500px) 500px,
+              (max-width: 800px) 800px,
+              1200px
+        "
+              src="./ressources/img-projets/site-fashion.jpg"
+              width="800"
+              height="400"
+              alt="image projet"
+            />
+          </div>
+          <h3>Projet site Fashion</h3>
+          <p>
+            Projet autours de l'univers Fashion en <strong>CSS</strong> et
+            <strong>JavaScript</strong> avec le dark mode &
+            <strong> ScrollReveal</strong>.
+          </p>
+          <a
+            href="https://oliive33.github.io/fashion-website/"
+            class="btn-projets"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Découvrez le projet</a
+          >
+        </div>
+        <div class="item vague3">
+          <div class="cont-img-port">
+            <img
+              srcset="
                 ressources/img-projets/commerce.js.jpg  500w,
                 ressources/img-projets/commerce.js.jpg  800w,
                 ressources/img-projets/commerce.js.jpg 1200w
@@ -1221,6 +1253,16 @@
             </div>
           </div>
         </div>
+        <!-- <h4>Pour accéder à votre questionnaire découverte :</h4>
+        <div class="questionnaire">
+          <img src="./ressources/right-arrow.svg" alt="arrow-right" />
+          <a
+            href="https://www.askabox.fr/repondre.php?s=417816&r=SPx37C8HgfEG"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Cliquer ici
+          </a>
+        </div> -->
         <div class="section-google">
           <img src="./ressources/google.png" alt="logo google">
           <h3>My Google Business</h3>
@@ -1235,16 +1277,6 @@
               <img src="./ressources/star.png" alt="logo star">
             </div>
           </div>
-        <!-- <h4>Pour accéder à votre questionnaire découverte :</h4>
-        <div class="questionnaire">
-          <img src="./ressources/right-arrow.svg" alt="arrow-right" />
-          <a
-            href="https://www.askabox.fr/repondre.php?s=417816&r=SPx37C8HgfEG"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Cliquer ici
-          </a>
-        </div> -->
       </div>
     </section>
 
